software/apps/extension/sample/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels:
    app: result
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
        tier: frontend
    spec:
      containers:
      - name: result
        image: dockersamples/examplevotingapp_result
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
