software/apps/extension/sample/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    tier: infrastructure
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
