software/apps/extension/sample/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    tier: infrastructure
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
